--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "less": "^3.10.3",
     "reqwest": "^2.0.5",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-router": "^3.1.5",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
